# agent-memory

./: .gitignore  .oxfmtignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  GAPS.md  README.md  clippy.toml  handoff.md  llms-install.md  package.json  pnpm-lock.yaml  rustfmt.toml  specgate.config.yml
.dylint/custom_lints/: .gitignore  Cargo.toml
.dylint/custom_lints/src/: file_too_long.rs  lib.rs  suspicious_fallback.rs  unnecessary_fallback.rs  utils.rs
crates/memorum-coordination/: Cargo.toml
crates/memorum-coordination/src/: claim_lock.rs  config.rs  framing_tests.rs  gate.rs  harness.rs  lib.rs  presence.rs  protocol.rs  session.rs
crates/memorum-coordination/tests/: claim_lock_unit.rs  config_validation.rs  gate_unit.rs  presence_unit.rs  session_derivation.rs
crates/memorum-eval/: Cargo.toml  README.md
crates/memorum-eval/src/: assertions.rs  benchmark.rs  daemon_scaffold.rs  enrichment.rs  harness_runner.rs  judge.rs  lib.rs  main.rs  orchestrator.rs  quality.rs  simulator.rs  support.rs
crates/memorum-eval/tests/: assertions_unit.rs  ci_workflow_shape.rs  crate_compiles.rs  daemon_scaffold_smoke.rs  domain.rs  golden_fixtures_lint.rs  handbook.rs  harness_runner_detection.rs  honesty.rs  live.rs  meta_dream_path_exclusion.rs  meta_orchestrator_smoke.rs  meta_privacy_filter_connectivity.rs  meta_simulator_connectivity.rs  mock_harness_smoke.rs  namespace_scoping_gate.rs  orchestrator_integration.rs  quality_baseline.rs  recall_block_format_round_trip.rs  regression_meta.rs  simulator_agent_smoke.rs  two_device_scaffold_smoke.rs
crates/memorum-theme/: Cargo.toml
crates/memorum-theme/src/: border.rs  charset.rs  density.rs  glyphs.rs  hot_reload.rs  keymap.rs  lib.rs  loader.rs  motion.rs  oklch.rs  resolver.rs  theme.rs  theme_load_error.rs  tokens.rs
crates/memorum-theme/tests/: charset_detection.rs  hot_reload.rs  loader_validation.rs  oklch_resolution.rs  preset_coverage.rs
crates/memory-governance/: Cargo.toml
crates/memory-governance/src/: contradiction.rs  decision.rs  engine.rs  error.rs  grounding.rs  hash.rs  lib.rs  merge.rs  policy.rs  review.rs  supersession.rs  tombstone.rs
crates/memory-governance/tests/: contradiction_contract.rs  decision_contract.rs  dogfood_defaults.rs  engine_contract.rs  governance_matrix.rs  grounding_contract.rs  policy_contract.rs  review_queue_contract.rs  supersession_contract.rs  tombstone_contract.rs
crates/memory-privacy/: Cargo.toml
crates/memory-privacy/src/: classifier.rs  crypto.rs  decision.rs  descriptor.rs  entropy.rs  error.rs  keys.rs  lib.rs  masking.rs  policy.rs  privacy_filter.rs  regex.rs  secret_only_scan.rs
crates/memory-privacy/tests/: decision_contract.rs  descriptor_projection.rs  encryption_contract.rs  envelope.rs  layer1_contract.rs  masking_contract.rs  policy_contract.rs  privacy_filter_contract.rs  runtime_switches.rs  safe_plaintext_fragment.rs
crates/memory-source/: Cargo.toml
crates/memory-source/src/: adapters.rs  capture.rs  error.rs  excerpt.rs  extract.rs  hash.rs  lib.rs  model.rs  storage.rs  url_safety.rs
crates/memory-source/tests/: extraction_excerpt.rs  http_capture.rs  model_contract.rs  privacy_storage_policy.rs  source_capture_redaction.rs  storage_integrity.rs  url_safety.rs
crates/memory-substrate/: Cargo.toml
crates/memory-substrate/src/: api.rs  cas.rs  error.rs  lib.rs  model.rs  path_validation.rs
crates/memory-substrate/tests/: api_contracts.rs  api_phase5_surface.rs  api_write_read.rs  async_cancellation.rs  atomic_write.rs  config_loading.rs  config_privacy.rs  crash_matrix.rs  dream_canonical_isolation.rs  dream_merge_rules.rs  dream_substrate_primitives.rs  embedding_lane_privacy.rs  error_variant_coverage.rs  event_kind_new_variants.rs  event_kind_schema.rs  event_log_identity.rs  event_log_recovery.rs  events_log_mirror.rs  frontmatter_original_confidence.rs  frontmatter_schema.rs  fts_query_sanitization.rs  git_adoption.rs  git_preflight.rs  hybrid_chunks.rs  id_sequence.rs  incremental_open_reindex.rs  index_migration_v6.rs  index_mutation.rs  index_pragmas.rs  memory_query_extension.rs  memory_supersession_projection.rs  merge_rules.rs  migration_v4.rs  open_validation.rs  read_memory_stale_index.rs  recall_index_row_indexed_at.rs  recall_index_row_source_device.rs  recall_index_row_source_identity.rs  reindex_reconciliation.rs  release_gate_contracts.rs  (+12 more)
crates/memory-test-support/: Cargo.toml
crates/memory-test-support/src/: convergence.rs  governance.rs  lib.rs  perf.rs
crates/memoryd/: Cargo.toml
crates/memoryd-tui/: Cargo.toml  clippy.toml
crates/memoryd-tui/src/: app.rs  client.rs  config.rs  lib.rs  main.rs  protocol.rs  state.rs  theme_glue.rs
crates/memoryd-tui/tests/: charset_fallback.rs  correct_editor.rs  filter_pills.rs  focus_mode_progress.rs  focus_mode_render.rs  focus_mode_transition.rs  inbox_polling.rs  inbox_ranking.rs  inbox_render.rs  inspector_router.rs  keymap.rs  keymap_actions.rs  palette_dispatch.rs  palette_fuzzy.rs  palette_open.rs  panel_render.rs  panic_restore.rs  preset_smoke.rs  recall_panel.rs  resize.rs  socket_unreachable.rs  status_footer.rs  terminal_capability_floor.rs  theme_application.rs  theme_hot_reload_e2e.rs  trust_artifact.rs
crates/memoryd-web/: Cargo.toml  build.rs
crates/memoryd-web/frontend/: .prettierrc  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
crates/memoryd-web/src/: auth.rs  config.rs  main.rs  server.rs  state.rs
crates/memoryd-web/static/: app.js  index.html  style.css
crates/memoryd-web/tests/: api_contract.rs  cli_command.rs  concurrent_access.rs  csrf.rs  dashboard_endpoints.rs  entity_endpoints.rs  frontend_smoke.rs  host_guard.rs  policy_editor_daemon.rs
crates/memoryd/examples/: embed_rss_spike.rs
crates/memoryd/src/: bench_harness.rs  cli.rs  client.rs  coordination_config.rs  export.rs  first_write.rs  handlers.rs  harvest.rs  (+18 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: merge_driver.rs  merge_swap_convergence.rs
(+1208 files in other folders)
