[package]
name = "memorum-coordination"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dashmap.workspace = true
memory-substrate = { path = "../memory-substrate" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bin]]
name = "peer_relevance_bench"
path = "src/bin/peer_relevance_bench.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
