[package]
name = "memorum-eval"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
memorum-coordination = { path = "../memorum-coordination", optional = true }
tokio.workspace = true

[features]
# Stream I is shipped; stream-i-deps is on by default so T19 runs in every CI
# build without needing --features stream-i-deps. (H-B2 fix)
default = ["stream-i-deps"]
stream-i-deps = ["dep:memorum-coordination"]
live-harness = []

[dev-dependencies]
memoryd = { path = "../memoryd" }
rusqlite.workspace = true
serde_json.workspace = true

[[test]]
name = "t19_peer_update_framing"
path = "tests/eval/regression/t19_peer_update_framing.rs"
