[package]
name = "memorum-theme"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
notify.workspace = true
serde = { version = "1", features = ["derive"] }
yaml_serde.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["sync"] }
toml = "0.8"
unicode-width = "0.2"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time", "sync"] }
