[package]
name = "memorum-theme"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
notify.workspace = true
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
tokio = { version = "1", features = ["sync"] }
toml = "0.8"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time", "sync"] }
