[package]
name = "memory-governance"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
yaml_serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
memory-source = { path = "../memory-source" }

[dev-dependencies]
tempfile.workspace = true
