[package]
name = "memory-privacy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
age.workspace = true
base64.workspace = true
chrono.workspace = true
memory-substrate = { path = "../memory-substrate" }
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
