[package]
name = "memory-privacy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
age.workspace = true
chrono.workspace = true
memory-substrate = { path = "../memory-substrate" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
# Zeroize-on-drop wrapper for the age x25519 private key held in KeyMaterial.
# Version pinned to the one already resolved transitively via `age`, so this
# direct dependency does not perturb the locked graph.
zeroize = "1"

[dev-dependencies]
tempfile.workspace = true
