[package]
name = "memory-source"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
encoding_rs.workspace = true
memory-privacy = { path = "../memory-privacy" }
reqwest.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
ulid.workspace = true
url.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
