[package]
name = "memory-substrate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
crc32c.workspace = true
crc32fast.workspace = true
fs2.workspace = true
hex.workspace = true
imara-diff.workspace = true
notify.workspace = true
once_cell.workspace = true
pulldown-cmark.workspace = true
rand.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
sqlite-vec.workspace = true
thiserror.workspace = true
tokio.workspace = true
tempfile.workspace = true
tracing.workspace = true
ulid.workspace = true
uuid.workspace = true
walkdir.workspace = true
which.workspace = true
yaml_serde.workspace = true

[dependencies.memory-test-support]
path = "../memory-test-support"

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
memory-source = { path = "../memory-source" }
zstd.workspace = true
