[package]
name = "memory-test-support"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
yaml_serde.workspace = true
sha2.workspace = true
proc-macro2 = { version = "1", features = ["span-locations"] }
syn = { version = "2", features = ["full"] }
tempfile.workspace = true
walkdir.workspace = true
