[package]
name = "memoryd-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm = "0.28"
memoryd = { path = "../memoryd" }
ratatui = "0.29"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
