[package]
name = "memoryd-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
autobins = false
build = "build.rs"

[lib]
path = "src/main.rs"

[[bin]]
name = "memoryd-web"
path = "src/bin/memoryd-web.rs"

[dependencies]
anyhow.workspace = true
axum = "0.8"
chrono.workspace = true
hex.workspace = true
memoryd = { path = "../memoryd" }
memory-governance = { path = "../memory-governance" }
rand.workspace = true
rust-embed = "8.11"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
flate2 = "1"
memory-substrate = { path = "../memory-substrate" }
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
