[package]
name = "memoryd-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
autobins = false
build = "build.rs"

[lib]
path = "src/main.rs"

[features]
# Compiles the in-memory dashboard fixtures (WebState::fixture / fixture_router /
# DashboardData and every *::fixture() builder). OFF by default so production
# `cargo install`/`cargo build` can never embed plausible fake dashboard numbers.
# The test gate and any local dev loop that needs fixtures must opt in explicitly
# via `--features dev-fixtures` (see scripts/check.sh).
dev-fixtures = []

[[bin]]
name = "memoryd-web"
path = "src/bin/memoryd-web.rs"

[dependencies]
anyhow.workspace = true
axum = "0.8"
chrono.workspace = true
hex.workspace = true
memoryd = { path = "../memoryd" }
memory-governance = { path = "../memory-governance" }
rand.workspace = true
rust-embed = "8.11"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
subtle = "2.6"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
flate2 = "1"
memory-substrate = { path = "../memory-substrate" }
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
