[package]
name = "memoryd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dialoguer = { version = "0.11", default-features = false }
dirs = "5"
fs2.workspace = true
memory-governance = { path = "../memory-governance" }
memory-source = { path = "../memory-source" }
memorum-coordination = { path = "../memorum-coordination" }
memory-privacy = { path = "../memory-privacy" }
memory-substrate = { path = "../memory-substrate" }
lettre = { version = "0.11", default-features = false, features = ["builder", "rustls-tls", "smtp-transport"] }
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit = "0.22"
serde_yaml.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ulid.workspace = true
walkdir.workspace = true
which.workspace = true
zstd.workspace = true

[features]
# test-utils: enables the TestInjectEvent daemon protocol variant used by Stream H
# eval tests for injecting synthetic events-log entries. Not compiled in release
# builds; production daemons receiving this variant return method_not_allowed.
test-utils = []
# dev-fixtures: enables deterministic harness fixtures for local tests and
# benches. Release builds without this feature must not expose `--cli echo`.
dev-fixtures = []

[[bin]]
name = "stream_f_dream_bench"
path = "src/bin/stream_f_dream_bench.rs"
required-features = ["dev-fixtures"]

[dev-dependencies]
rusqlite.workspace = true
serial_test.workspace = true
tokio = { workspace = true, features = ["test-util"] }
