[package]
name = "memoryd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dialoguer = { version = "0.11", default-features = false }
dirs = "5"
# Production embedding inference (Stream B). Qwen3-Embedding-0.6B via the
# fastembed candle backend with Metal GPU offload; the `accelerate` feature
# (Apple BLAS, CPU) is the documented fallback if Metal misbehaves on a host.
# `ort-download-binaries-native-tls` is required because fastembed links the
# ONNX runtime unconditionally even on the candle-only path.
fastembed = { version = "=5.16.0", default-features = false, features = [
    "qwen3",
    "metal",
    "hf-hub-native-tls",
    "ort-download-binaries-native-tls",
] }
# `Device`/`DType` for selecting the Metal vs CPU candle backend that fastembed
# loads Qwen3 onto. Pinned to fastembed's candle version so one candle compiles.
candle-core = "=0.10.2"
fs2.workspace = true
memory-governance = { path = "../memory-governance" }
memory-source = { path = "../memory-source" }
memorum-coordination = { path = "../memorum-coordination" }
memory-privacy = { path = "../memory-privacy" }
memory-substrate = { path = "../memory-substrate" }
lettre = { version = "0.11", default-features = false, features = ["builder", "rustls-tls", "smtp-transport"] }
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ulid.workspace = true
walkdir.workspace = true
which.workspace = true
zstd.workspace = true

[features]
# test-utils: enables the TestInjectEvent daemon protocol variant used by Stream H
# eval tests for injecting synthetic events-log entries. Not compiled in release
# builds; production daemons receiving this variant return method_not_allowed.
test-utils = []
# dev-fixtures: enables deterministic harness fixtures for local tests and
# benches. Release builds without this feature must not expose `--cli echo`.
dev-fixtures = []

[[bin]]
name = "stream_f_dream_bench"
path = "src/bin/stream_f_dream_bench.rs"
required-features = ["dev-fixtures"]

[dev-dependencies]
rusqlite.workspace = true
serial_test.workspace = true
tokio = { workspace = true, features = ["test-util"] }
