[package]
name = "memoryd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dialoguer = { version = "0.11", default-features = false }
dirs = "5"
# Production embedding inference (Stream B). Qwen3-Embedding-0.6B via the
# fastembed candle backend. macOS adds Metal GPU offload below; Linux CI must
# not enable fastembed/metal because that pulls objc2, which is Apple-only.
# `ort-download-binaries-native-tls` is required because fastembed links the
# ONNX runtime unconditionally even on the candle-only path.
fastembed = { version = "=5.16.0", default-features = false, features = [
    "qwen3",
    "hf-hub-native-tls",
    "ort-download-binaries-native-tls",
] }
# `Device`/`DType` for selecting the Metal vs CPU candle backend that fastembed
# loads Qwen3 onto. Pinned to fastembed's candle version so one candle compiles.
candle-core = "=0.10.2"
fs2.workspace = true
memory-governance = { path = "../memory-governance" }
memory-source = { path = "../memory-source" }
memorum-coordination = { path = "../memorum-coordination" }
memory-privacy = { path = "../memory-privacy" }
memory-substrate = { path = "../memory-substrate" }
lettre = { version = "0.11.22", default-features = false, features = ["builder", "rustls-tls", "smtp-transport"] }
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "fmt", "ansi"] }
ulid.workspace = true
walkdir.workspace = true
which.workspace = true
zstd.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# Keep Trey's local production path on Metal-capable Macs while letting Linux
# `--all-features` CI resolve without Apple-only objc2 crates.
fastembed = { version = "=5.16.0", default-features = false, features = ["metal"] }

[features]
# test-utils: enables the TestInjectEvent daemon protocol variant used by Stream H
# eval tests for injecting synthetic events-log entries. Not compiled in release
# builds; production daemons receiving this variant return method_not_allowed.
test-utils = []
# dev-fixtures: enables deterministic harness fixtures for local tests and
# benches. Release builds without this feature must not expose `--cli echo`.
dev-fixtures = []

[[bin]]
name = "stream_f_dream_bench"
path = "src/bin/stream_f_dream_bench.rs"
required-features = ["dev-fixtures"]

# Bench bins are dev tooling: gating them behind dev-fixtures keeps
# `cargo install memoryd` from dropping bench executables into a user's PATH.
[[bin]]
name = "stream_e_recall_bench"
path = "src/bin/stream_e_recall_bench.rs"
required-features = ["dev-fixtures"]

[[bin]]
name = "stream_g_bench"
path = "src/bin/stream_g_bench.rs"
required-features = ["dev-fixtures"]

[dev-dependencies]
rusqlite.workspace = true
serial_test.workspace = true
tokio = { workspace = true, features = ["test-util"] }
